--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.1"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.10",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^7.14.0",
