--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react/prop-types": "off",
+    "eslint/no-redeclare": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
