setting React Navigation

--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -34,6 +34,7 @@
           "tsx": "never"
         }
       ],
+      "no-use-before-define": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
